// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fields-layout can mount "fieldset" fields layout 1`] = `
<div class="GRID_MOCK">
	<fieldset>
		<legend class="SharpForm__label form-label">Fieldset</legend>
		<div class="card SharpForm__fieldset shadow-sm">
			<div class="card-body">
				<div class="FIELDS_LAYOUT_MOCK" layout="[object Object]">
					<div class="FIELD_MOCK" data="[object Object]"></div>
				</div>
			</div>
		</div>
	</fieldset>
</div>
`;

exports[`fields-layout can mount "hidden fieldset" fields layout 1`] = `
<div class="GRID_MOCK">
	<fieldset style="display: none;">
		<legend class="SharpForm__label form-label">Fieldset</legend>
		<div class="card SharpForm__fieldset shadow-sm">
			<div class="card-body">
				<div class="FIELDS_LAYOUT_MOCK" layout="[object Object]">
					<div class="FIELD_MOCK" data="[object Object]"></div>
				</div>
			</div>
		</div>
	</fieldset>
</div>
`;

exports[`fields-layout can mount fields layout 1`] = `
<div class="GRID_MOCK">
	<div class="FIELD_MOCK" data="[object Object]"></div>
</div>
`;
